Changelog
=========

4.6.2 (unreleased)
------------------

- Hide commenting functionality, only show existing comments. #HELP-2761


4.6.1 (2020-10-06)
------------------

- New link to accessibility. #HELP-2413


4.6.0 (2020-07-20)
------------------

- Review Exhibition: Support for permanent exhibitons.
  Migration to new schema; indexer for "years" field.
  #SCR-340


4.5.1 (2020-04-23)
------------------

- OPAC search: Use production SWB URL, not test. #HELP-1932
- OPAC search: Continue with other sources if one fails. #HELP-1932


4.5.0 (2019-09-26)
------------------

- OPAC search: Also query SWB. #FLOW-650
- Support for new content types. #FLOW-649


4.4.0 (2019-06-05)
------------------

- Footer: Only show BSB logo. #FLOW-434
- RSS: Limit search results to maximum number of items we're returning.
  #FLOW-198
- Social Media Buttons: Moved to their own viewlet and updated markup. #FLOW-439
- Support for multipart titles. #FLOW-520


4.3.5 (2018-12-12)
------------------

- Include subtitle in titleOrShortname index. Refs #REC-981
- Registration: Added reference to data protection statement. #REC-991
- Updated DDCs. #REC-983


4.3.4 (2018-05-25)
------------------

- Moved "Datenschutz" link to footer. Refs #17066


4.3.3 (2018-03-05)
------------------

- Also hide captcha etc. from user-information. Refs #16160
  [reinhardt]


4.3.2 (2018-01-18)
------------------

- Upgraded to dara schema 4.0. Refs #16169
  [reinhardt]
- Added social media buttons. Refs #16159
  [reinhardt]


4.3.1 (2017-11-16)
------------------

- Added setting for disabling thematic search section. Refs #16044
  [reinhardt]
- Added setting for Chronicon file name prefix. Refs #16093
  [reinhardt]
- Patched pyPdf to fix infinite loop. Refs #16076
  [reinhardt]


4.3.0 (2017-09-21)
------------------

- Added custom logo link that points to navigation root. Refs #15816
  [reinhardt]
- Also index e-book fields. Refs #15676
  [reinhardt]