@@ -81,6 +81,7 @@ setup(
       recensio-policy-reset = recensio.policy:reset
       createSite = recensio.policy:createSite
       metadata-export = recensio.policy.scripts.console_scripts:metadata_export
+      chronicon-export = recensio.policy.scripts.console_scripts:chronicon_export
       newsletter = recensio.policy.scripts.console_scripts:newsletter
       sehepunkte-import = recensio.policy.scripts.console_scripts:sehepunkte_import
       register-all-dois = recensio.policy.scripts.console_scripts:register_all_dois
